@startuml IGUI

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam linetype ortho
skinparam nodesep 50
skinparam ranksep 30

title Diagram Kelas IGUI (Interface UI Layer)

interface IGUI <<interface>> {
    .. Menu & Input Umum ..
    + showMainMenu() : MenuChoice
    + getPlayerCount() : int
    + getPlayerName(index : int) : string
    + getFilename(prompt : string) : string
    + getCommand() : string
    + getYesNo(prompt : string) : bool
    + getChoice(prompt : string, options : vector<string>) : int
    + getPropertyCode(prompt : string) : string
    .. Input Khusus ..
    + getBidInput(player : Player&, currentHighBid : int) : pair<AuctionAction, int>
    .. Render / Output ..
    + renderBoard(game : const Game&) : void
    + renderDeed(property : const Property&) : void
    + renderPlayerProperties(player : const Player&) : void
    + renderLog(entries : const vector<LogEntry>&) : void
    + renderDiceResult(d1 : int, d2 : int) : void
    + renderMovement(player : const Player&, from : int, to : int) : void
    + renderMessage(msg : string) : void
    + renderAuctionStatus(property : const Property&, highBid : int, bidder : const Player*) : void
    + renderBankruptcy(player : const Player&, creditor : const Player*) : void
    + renderWinner(winners : vector<Player*>, game : const Game&) : void
    + renderSkillCards(player : const Player&) : void
    + renderLiquidationPanel(player : const Player&, options : vector<string>, debt : int) : void
}

enum MenuChoice {
    NEW_GAME
    LOAD_GAME
}

class CLIRenderer {
    + showMainMenu() : MenuChoice
    + getPlayerCount() : int
    + getPlayerName(index : int) : string
    + getFilename(prompt : string) : string
    + getCommand() : string
    + getYesNo(prompt : string) : bool
    + getChoice(prompt : string, options : vector<string>) : int
    + getPropertyCode(prompt : string) : string
    + getBidInput(player : Player&, currentHighBid : int) : pair<AuctionAction, int>
    + renderBoard(game : const Game&) : void
    + renderDeed(property : const Property&) : void
    + renderPlayerProperties(player : const Player&) : void
    + renderLog(entries : const vector<LogEntry>&) : void
    + renderDiceResult(d1 : int, d2 : int) : void
    + renderMovement(player : const Player&, from : int, to : int) : void
    + renderMessage(msg : string) : void
    + renderAuctionStatus(property : const Property&, highBid : int, bidder : const Player*) : void
    + renderBankruptcy(player : const Player&, creditor : const Player*) : void
    + renderWinner(winners : vector<Player*>, game : const Game&) : void
    + renderSkillCards(player : const Player&) : void
    + renderLiquidationPanel(player : const Player&, options : vector<string>, debt : int) : void
}

class GUIRenderer <<Bonus>> {
    '.. Implementasi GUI grafis (Raylib/SFML) ..
    '.. Method sama seperti CLIRenderer ..
}

' Relasi
CLIRenderer ..|> IGUI : implements >
GUIRenderer ..|> IGUI : implements >
IGUI ..> MenuChoice : returns >

' Siapa yang menggunakan IGUI
class GameEngine <<Engine>> {
}
class AuctionManager <<Engine>> {
}
class BankruptcyManager <<Engine>> {
}
class TurnManager <<Engine>> {
}

GameEngine --> IGUI : uses (dependency injection) >
AuctionManager --> IGUI : references >
BankruptcyManager --> IGUI : references >
TurnManager --> IGUI : for drop card input >

note bottom of IGUI
    <b>Strategy Pattern / Dependency Injection</b>
    Interface ini memungkinkan swap antara
    CLIRenderer dan GUIRenderer (bonus)
    tanpa mengubah logika permainan.

    <b>Aturan ketat:</b>
    · GUI TIDAK menyimpan state permainan
    · GUI TIDAK memiliki logika permainan
    · GUI HANYA menampilkan output dan menerima input
    · Semua data yang ditampilkan diterima sebagai parameter

    <b>Alur interaksi:</b>
    GameEngine memanggil gui->renderX() untuk output
    GameEngine memanggil gui->getX() untuk input
    GUI mengembalikan data ke GameEngine
    GameEngine yang memproses dan memutuskan
end note

@enduml
